--- a/scss/over_ons.scss
+++ b/scss/over_ons.scss
@@ -93,6 +93,7 @@ body{
                         @media only screen and(max-width: 768px){
                             background-color: $accent2Color;
                             border-radius: 5px;
+                            padding-right: 20px;
                         }
                     }
                     .text-md-left{
