--- a/scss/winkelmandje.scss
+++ b/scss/winkelmandje.scss
@@ -85,6 +85,9 @@ body{
                                         margin-right: 3px;
                                         }
                                     }
+                                    #aantalBandjes1, #aantalBandjes2, #aantalBandjes3{
+                                        padding: 10px 0 0 0;
+                                    }
                                 } 
                                 div{
                                     input{
